--- a/index.html
+++ b/index.html
@@ -1,10 +1,15 @@
 <!DOCTYPE html>
 <html>
   <head>
+  	<!-- <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.1.1/jquery.min.js"> -->
     <title>particle-excess-demo</title>
   </head>
   <body>
-    <a href="https://github.com/hughsk/particle-excess-demo"><img style="position: absolute; top: 0; right: 0; border: 0; z-index: 99999" src="https://s3.amazonaws.com/github/ribbons/forkme_right_darkblue_121621.png" alt="Fork me on GitHub"></a>
+  	<button style="position: absolute; top:100px; left:0px; z-index: 99999" onclick="rightb()">right</button>
+    <a href="https://github.com/hughsk/particle-excess-demo"><img style="position: absolute; top: 10; right: 0; border: 0; z-index: 99999" src="https://s3.amazonaws.com/github/ribbons/forkme_right_darkblue_121621.png" alt="Fork me on GitHub"></a>
+    <button style="position: absolute; top:200px; left:0px; z-index: 99999" onclick="downb()">down</button>
+    
     <script type="text/javascript" src="bundle.js"></script>
+    
   </body>
 </html>
